    - Count it as a failure if we fetch a valid network-status but we
      don't want to keep it. Otherwise we'll keep fetching it and keep
      not wanting to keep it. Fixes part of bug 422.
    - If all of our dirservers have given us bad or no networkstatuses
      lately, then stop hammering them once per minute even when we
      think they're failed. Fixes another part of bug 422.

  o Minor bugfixes:
    - Actually set the purpose correctly for descriptors inserted with
      purpose=controller.
    - When we have k non-v2 authorities in our DirServer config,
      we ignored the last k authorities in the list when updating our
      network-statuses.
    - Correctly back-off from requesting router descriptors that we are
      having a hard time downloading.
    - Read resolv.conf files correctly on platforms where read() returns
      partial results on small file reads.
    - Don't rebuild the entire router store every time we get 32K of
      routers: rebuild it when the journal gets very large, or when
      the gaps in the store get very large.

  o Minor features:
    - When routers publish SVN revisions in their router descriptors,
      authorities now include those versions correctly in networkstatus
      documents.


Changes in version 0.1.2.13 - 2007-04-24
  o Minor fixes:
    - Fix a memory leak when we ask for "all" networkstatuses and we
      get one we don't recognize.
    - Add more asserts to hunt down bug 417.
    - Disable kqueue on OS X 10.3 and earlier, to fix bug 371.


Changes in version 0.1.2.12-rc - 2007-03-16
  o Major bugfixes:
    - Fix an infinite loop introduced in 0.1.2.7-alpha when we serve
      directory information requested inside Tor connections (i.e. via
      begin_dir cells). It only triggered when the same connection was
      serving other data at the same time. Reported by seeess.

  o Minor bugfixes:
    - When creating a circuit via the controller, send a 'launched'